<resources>
    <string name="app_name">Consulta Cep</string>
    <string name="cpf_input_placeholder">00000-000</string>
    <string name="cpf_label">Consulte um CEP:</string>
    <string name="consult_cep_button">Consultar Cep</string>
    <string name="district_label">Bairro: </string>
    <string name="complement_label">Complemento: </string>
    <string name="city_label">Cidade: </string>
    <string name="uf_label">UF: </string>
    <string name="ibge_label">IBGE: </string>
    <string name="gia_label">GIA: </string>
    <string name="ddd_label">DDD: </string>
    <string name="siafi_label">SIAFI: </string>
    <string name="street_label">Logradouro:</string>
    <string name="tracking_code_label">Consulte o código do seu pedido:</string>
    <string name="traking_code_input_placeholder">QH878046700BR</string>
    <string name="consult_track_button">Consultar código de rastreio</string>
    <string name="code_label">Código:</string>
    <string name="track_code_label">Descrição:</string>
    <string name="track_activity_button">Consultar código de rastreio</string>
    <string name="cep_activity_button">Consultar Cep</string>
</resources>