<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.CepActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpf_label"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cep_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="postalCode"
        android:hint="@string/cpf_input_placeholder"
        android:inputType="number"
        android:textColorHint="@android:color/holo_purple" />

    <Button
        android:id="@+id/consult_cep_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/consult_cep_button"
        android:textSize="16sp"
        app:cornerRadius="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/street_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/street_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/complement_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complement_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/complement_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/district_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/district_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/district_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/city_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/uf_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uf_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/uf_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ibge_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ibge_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ibge_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gia_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gia_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gia_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ddd_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ddd_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ddd_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/siafi_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siafi_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/siafi_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/track_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="64dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/track_activity_button"
        android:textSize="16sp"
        app:cornerRadius="8dp" />

</LinearLayout>